fix flex item margin for results in detail since they are aligned left now.

--- a/src/components/SpotifyResultDetail/SpotifyResultDetail.css
+++ b/src/components/SpotifyResultDetail/SpotifyResultDetail.css
@@ -10,7 +10,7 @@
     margin: 0 0 0 1em;
 }
 .spotify_result-detail .spotify_search-result {    
-    margin: 0 .25em .5em;
+    margin: 0 1em 1em 0;
 }
 .spotify_result-detail-query {
     text-align: left;
@@ -51,6 +51,10 @@
 @media (max-width: 893px) {
     .spotify_result-detail > div {
         min-height: 100%;
+    }
+
+    .spotify_result-detail .spotify_search-result {    
+        margin: 0 .25em .5em;
     }
 
     .spotify_result-detail > button {
